# maskman

./: .clang-format  .clang-tidy  CHANGELOG.md  CHANGELOG.org  CMakeLists.txt  LICENSE  Makefile  MaskmanConfig.cmake.in  README.md
.github/workflows/: build-test-ubi8.yml  build-test-ubi9.yml  build-test-ubuntu.yml  build-test.yml  docs.yml
appMaskman/: CMakeLists.txt  appMaskman.c
cmake/: cosmo.cmake
doc/: CMakeLists.txt  Makefile  index.html  init.el  latexmkrc  load.el  maskman.org  preamble.tex
libKillist/: CMakeLists.txt  libKillist.c  libKillist.h  utst-killist.c
libMaskman/: CMakeLists.txt  libMaskman.c  libMaskman.h
methodLUIS/: CMakeLists.txt  libLUIS.c  libLUIS.h
methodSimpleSTDOUT/: CMakeLists.txt  libSimpleSTDOUT.c  libSimpleSTDOUT.h
test/align/: sizeof_struct.c
test/asan/: default.supp
test/ctest/: runtest.cmake
test/ctest/gold/: checkspr.gold
test/ctest/params/: checkspr.params
test/slurm/: sbatch.sh
test/valgrind/: sepsupp.py  valgrind-suppress.txt
